corrected  cards alignements 2025-18-01

--- a/styles.css
+++ b/styles.css
@@ -348,6 +348,7 @@ max-width: 520px;
 
 
   /* justify-content: space-between;
+   margin-top: 15px;
   align-items: center;
   text-align: center;
   width: 100%;
